[gd_scene load_steps=6 format=3 uid="uid://yg3auyo7u0rv"]

[ext_resource type="Script" path="res://Category.gd" id="1_54iup"]

[sub_resource type="Animation" id="Animation_mrf51"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kobtf"]
resource_name = "magnify"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4a1d8"]
_data = {
"RESET": SubResource("Animation_mrf51"),
"magnify": SubResource("Animation_kobtf")
}

[sub_resource type="LabelSettings" id="LabelSettings_ny4ke"]
font_color = Color(0.494118, 0.211765, 0.0627451, 1)

[node name="Category" type="Node2D"]
script = ExtResource("1_54iup")

[node name="CategorySprite" type="TextureRect" parent="."]
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4a1d8")
}

[node name="CategoryName" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.5
offset_top = 45.0
offset_right = 86.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 0
text = "Category Name"
label_settings = SubResource("LabelSettings_ny4ke")
horizontal_alignment = 1

[connection signal="gui_input" from="CategorySprite" to="." method="_on_category_sprite_gui_input"]
[connection signal="mouse_entered" from="CategorySprite" to="." method="_on_category_sprite_mouse_entered"]
[connection signal="mouse_exited" from="CategorySprite" to="." method="_on_category_sprite_mouse_exited"]
